# serializer version: 1
# name: test_notice_message_and_text_snapshot[generic]
  '''
  <p>Pantheon is <a href="https://docs.pantheon.io/guides/global-cdn/global-cdn-beta#setup">making a change to their CDN</a>, from the legacy Pantheon GCDN (Fastly) to the new Pantheon GCDN Beta (Pantheon Cloudflare).  Before <strong>bus-occb</strong> can move to the new GCDN Beta, each of its custom domains must resolve through A and AAAA records instead of a CNAME record.</p>
  <p>These domains for <strong>bus-occb</strong> still use a CNAME record:</p>
  <div class="container">
  <table class="responsive-table site-updates">
  <thead><th class="rt-plan">Domain</th><th class="rt-plan">Change it in</th><th class="rt-plan">Replace the CNAME record with</th></thead>
  <tbody>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">occb.bus.umich.edu</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.4<br>AAAA 2620:12a:8000::4<br>AAAA 2620:12a:8001::4</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">backstage.its.umich.edu</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">our (non-Pantheon) Cloudflare</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.2<br>AAAA 2620:12a:8000::2<br>AAAA 2620:12a:8001::2</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">both.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS and our (non-Pantheon) Cloudflare</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.9</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">migrated.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">CNAME fe.cfp2c.edge.pantheon.io</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">unresolvable.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">unavailable &mdash; see this site&#39;s Domains page in the Pantheon dashboard</div></td></tr>
  </tbody>
  </table>
  </div>
  <p>Please replace each CNAME record above with the records shown.</p>
  '''
# ---
# name: test_notice_message_and_text_snapshot[generic].1
  '''
  Pantheon is making a change to their CDN <https://docs.pantheon.io/guides/global-cdn/global-cdn-beta#setup>, from the legacy Pantheon
  GCDN (Fastly) to the new Pantheon GCDN Beta (Pantheon Cloudflare).  Before
  bus-occb can move to the new GCDN Beta, each of its custom domains must resolve
  through A and AAAA records instead of a CNAME record.
  
  These domains for bus-occb still use a CNAME record:
  
    occb.bus.umich.edu  (change it in DNS)
        A      23.185.0.4
        AAAA   2620:12a:8000::4
        AAAA   2620:12a:8001::4
  
    backstage.its.umich.edu  (change it in our (non-Pantheon) Cloudflare)
        A      23.185.0.2
        AAAA   2620:12a:8000::2
        AAAA   2620:12a:8001::2
  
    both.example.org  (change it in DNS and our (non-Pantheon) Cloudflare)
        A      23.185.0.9
  
    migrated.example.org  (change it in DNS)
        CNAME  fe.cfp2c.edge.pantheon.io
  
    unresolvable.example.org  (change it in DNS)
        unavailable -- see this site's Domains page in the Pantheon dashboard
  
  Please replace each CNAME record above with the records shown.
  
  '''
# ---
# name: test_notice_message_and_text_snapshot[umich-after-cutoff]
  '''
  <p>Pantheon is <a href="https://docs.pantheon.io/guides/global-cdn/global-cdn-beta#setup">making a change to their CDN</a>, from the legacy Pantheon GCDN (Fastly) to the new Pantheon GCDN Beta (Pantheon Cloudflare).  Before <strong>bus-occb</strong> can move to the new GCDN Beta, each of its custom domains must resolve through A and AAAA records instead of a CNAME record.</p>
  <p>These domains for <strong>bus-occb</strong> still use a CNAME record:</p>
  <div class="container">
  <table class="responsive-table site-updates">
  <thead><th class="rt-plan">Domain</th><th class="rt-plan">Change it in</th><th class="rt-plan">Replace the CNAME record with</th></thead>
  <tbody>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">occb.bus.umich.edu</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.4<br>AAAA 2620:12a:8000::4<br>AAAA 2620:12a:8001::4</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">backstage.its.umich.edu</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">U-M Cloudflare</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.2<br>AAAA 2620:12a:8000::2<br>AAAA 2620:12a:8001::2</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">both.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS and U-M Cloudflare</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.9</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">migrated.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">CNAME fe.cfp2c.edge.pantheon.io</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">unresolvable.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">unavailable &mdash; please contact us</div></td></tr>
  </tbody>
  </table>
  </div>
  <p>Please replace each CNAME record above with the records shown.</p>
  '''
# ---
# name: test_notice_message_and_text_snapshot[umich-after-cutoff].1
  '''
  Pantheon is making a change to their CDN <https://docs.pantheon.io/guides/global-cdn/global-cdn-beta#setup>, from the legacy Pantheon
  GCDN (Fastly) to the new Pantheon GCDN Beta (Pantheon Cloudflare).  Before
  bus-occb can move to the new GCDN Beta, each of its custom domains must resolve
  through A and AAAA records instead of a CNAME record.
  
  These domains for bus-occb still use a CNAME record:
  
    occb.bus.umich.edu  (change it in DNS)
        A      23.185.0.4
        AAAA   2620:12a:8000::4
        AAAA   2620:12a:8001::4
  
    backstage.its.umich.edu  (change it in U-M Cloudflare)
        A      23.185.0.2
        AAAA   2620:12a:8000::2
        AAAA   2620:12a:8001::2
  
    both.example.org  (change it in DNS and U-M Cloudflare)
        A      23.185.0.9
  
    migrated.example.org  (change it in DNS)
        CNAME  fe.cfp2c.edge.pantheon.io
  
    unresolvable.example.org  (change it in DNS)
        unavailable -- please contact us
  
  Please replace each CNAME record above with the records shown.
  
  '''
# ---
# name: test_notice_message_and_text_snapshot[umich-before-cutoff]
  '''
  <p>Pantheon is <a href="https://docs.pantheon.io/guides/global-cdn/global-cdn-beta#setup">making a change to their CDN</a>, from the legacy Pantheon GCDN (Fastly) to the new Pantheon GCDN Beta (Pantheon Cloudflare).  Before <strong>bus-occb</strong> can move to the new GCDN Beta, each of its custom domains must resolve through A and AAAA records instead of a CNAME record.</p>
  <p>These domains for <strong>bus-occb</strong> still use a CNAME record:</p>
  <div class="container">
  <table class="responsive-table site-updates">
  <thead><th class="rt-plan">Domain</th><th class="rt-plan">Change it in</th><th class="rt-plan">Replace the CNAME record with</th></thead>
  <tbody>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">occb.bus.umich.edu</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.4<br>AAAA 2620:12a:8000::4<br>AAAA 2620:12a:8001::4</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">backstage.its.umich.edu</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">U-M Cloudflare</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.2<br>AAAA 2620:12a:8000::2<br>AAAA 2620:12a:8001::2</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">both.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS and U-M Cloudflare</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">A 23.185.0.9</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">migrated.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">CNAME fe.cfp2c.edge.pantheon.io</div></td></tr>
  <tr><td><div class="rt-data-header rt-plan">Domain</div><div class="rt-data rt-plan">unresolvable.example.org</div></td><td><div class="rt-data-header rt-plan">Change it in</div><div class="rt-data rt-plan">DNS</div></td><td><div class="rt-data-header rt-plan">Replace the CNAME record with</div><div class="rt-data rt-plan">unavailable &mdash; please contact us</div></td></tr>
  </tbody>
  </table>
  </div>
  <p>ITS will make these changes for you during an upcoming maintenance, which we will schedule and announce.  If you would rather make the changes yourself before then, you are welcome to.</p>
  '''
# ---
# name: test_notice_message_and_text_snapshot[umich-before-cutoff].1
  '''
  Pantheon is making a change to their CDN <https://docs.pantheon.io/guides/global-cdn/global-cdn-beta#setup>, from the legacy Pantheon
  GCDN (Fastly) to the new Pantheon GCDN Beta (Pantheon Cloudflare).  Before
  bus-occb can move to the new GCDN Beta, each of its custom domains must resolve
  through A and AAAA records instead of a CNAME record.
  
  These domains for bus-occb still use a CNAME record:
  
    occb.bus.umich.edu  (change it in DNS)
        A      23.185.0.4
        AAAA   2620:12a:8000::4
        AAAA   2620:12a:8001::4
  
    backstage.its.umich.edu  (change it in U-M Cloudflare)
        A      23.185.0.2
        AAAA   2620:12a:8000::2
        AAAA   2620:12a:8001::2
  
    both.example.org  (change it in DNS and U-M Cloudflare)
        A      23.185.0.9
  
    migrated.example.org  (change it in DNS)
        CNAME  fe.cfp2c.edge.pantheon.io
  
    unresolvable.example.org  (change it in DNS)
        unavailable -- please contact us
  
  ITS will make these changes for you during an upcoming maintenance, which we
  will schedule and announce.  If you would rather make the changes yourself
  before then, you are welcome to.
  
  '''
# ---
